<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_rename"
        android:icon="@drawable/ic_edit"
        android:title="@string/rename"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:iconTint="@color/black"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:iconTint="@color/black"
        android:title="@string/share"
        app:showAsAction="ifRoom" />

</menu>