<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg"
    tools:context=".CY_M_Activities.CY_M_FaqActivity">

    <RelativeLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_130sdp"
        android:background="@drawable/splash_bg">

        <ImageView
            android:id="@+id/back"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:rotation="180"
            android:src="@drawable/back"
            app:tint="@color/white" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_toRightOf="@+id/back"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:layout_toEndOf="@+id/back"
            android:fontFamily="@font/gotham_medium"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:text="FAQ"
            android:textColor="@color/white"
            android:textSize="@dimen/_20sdp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/back"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/gotham_medium"
            android:gravity="center_vertical"
            android:lineSpacingExtra="@dimen/_10sdp"
            android:paddingLeft="@dimen/_10sdp"
            android:text="Frequently \nAsked Questions"
            android:textColor="@color/white"
            android:textSize="@dimen/_25sdp" />

    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/top"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/_15sdp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_q1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_a1"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_q2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_a2"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_q3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_a3"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_q4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_a4"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_q5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_a5"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_q6"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginRight="@dimen/_10sdp"
                    android:text="@string/str_a6"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_15sdp" />
            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>